deployments/k8s/base/api-server/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-template-destination-rule
spec:
  host: api-template-service
  subsets:
    - name: v1
      labels:
        version: v1
