deployments/k8s/base/api-server/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: api-template-authorization-policy
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: api-template-gateway
  action: ALLOW
  rules:
    - to:
      - operation:
          methods: [ "GET" ]
          paths: [ "/", "/healthz" ]
